--- a/src/styles/removeuser.css
+++ b/src/styles/removeuser.css
@@ -51,3 +51,11 @@
 .remove-btn:hover {
   background-color: #c9302c;
 }
+
+.remove-icon {
+  display: block;
+  margin: 0 auto 15px auto;
+  width: 80px;
+  height: auto;
+}
+
